# Template

./: readme.md
VSCode_C_MinGW_CMake_Template/: CMakeLists.txt  astyle_v2.bat  clean.bat  clean.sh  linux_init_env.sh  main.c
VSCode_C_MinGW_CMake_Template/include/: printf_a.h  printf_b.h
VSCode_C_MinGW_CMake_Template/src/: printf_a.c  printf_b.c
VSCode_C_MinGW_Template/: main.c
VSCode_C_MinGW_Template/include/: printf_a.h  printf_b.h
VSCode_C_MinGW_Template/src/: printf_a.c  printf_b.c
